k3s/frontend-wandoor/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wandoor-frontend
  namespace: wandoor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wandoor-frontend
  template:
    metadata:
      labels:
        app: wandoor-frontend
    spec:
      containers:
        - name: wandoor-frontend
          image: jrtr1/wandoor-frontend-app:frontend-c69ddded587cbcb954981c9284a340f18dae4a4d
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: wandoor
spec:
  selector:
    app: wandoor-frontend
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30081 # akses dari luar VM: http://<VM_EXTERNAL_IP>:30080
